gst-device-monitor-1.0 - v1.24.2.1 windows - endless loop
on one of my computers (without video capture devices)
gst-device-monitor-1.0 Source/Video
never exit, it stay in an endless loop
Windows 10 gstreamer 1.24.2.1
i attach the debug level 7 gstreamerdebug.txt
not sure if it's related to this recent a7fe79c4
@seungha.yang could you please check it?
thank you
Edited by Maurizio Burato